# pw-ac3-live

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  agent.md  pw-ac3-live-laptop.desktop  pw-ac3-live-steamdeck.desktop
.github/workflows/: ci.yml  package-steamdeck.yml
docs/: ARCHITECTURE.md  MANUAL_SETUP.md  TESTING.md  TROUBLESHOOTING.md
scripts/: connect.sh  debug_alsa_diagnostics.sh  debug_audio_devices.sh  launch_laptop.sh  launch_live.sh  launch_live_laptop.sh  launch_live_steamdeck.sh  launch_steamdeck.sh  package_steam_deck.sh  reduce_pipe_latency.py  test_alsa_latency.sh  test_direct_alsa_sink.sh  test_ffmpeg_pipeline.sh  test_local_pipeline.sh  test_passthrough_pipeline.sh  test_pipewire_pipeline.sh  test_surround.sh  test_surround_sequential.sh  test_surround_strict.sh  validate_audio.sh  validate_env.sh  validate_runtime.sh
scripts/lib/: launch_common.sh
skills/: SKILL.md
src/: alsa_control.rs  encoder.rs  lib.rs  main.rs  pipewire_client.rs
tests/: alsa_control_tests.rs  encoder_tests.rs  pipewire_client_tests.rs
tests/scripts/: test_alsa_latency.sh  test_ci_alsa_args.sh  test_ci_help.sh  test_ci_idle_shutdown.sh  test_ci_pipeline.sh  test_ci_sigint.sh  test_ci_stereo_input.sh  test_direct_alsa_sink.sh  test_ffmpeg_pipeline.sh  test_local_pipeline.sh  test_passthrough_pipeline.sh  test_pipewire_pipeline.sh  test_surround.sh  test_surround_strict.sh  (+1 more)
working_state/: amixer_contents.txt  aplay_L.txt  aplay_cmd.txt  asound_cards.txt  current_steamdeck_state.md  eld_info.txt  output.logs  pactl_inputs.txt  pactl_sinks.txt
(+5 files in other folders)
