[package]
name = "pw-ac3-live"
version = "0.1.0"
edition = "2021"
description = "Real-time AC-3 encoder for PipeWire"

[dependencies]
# PipeWire bindings
pipewire = "0.8"
libspa = "0.8"

# Lock-free ring buffer for RT-safe communication
rtrb = "0.3"

# Error handling
anyhow = "1.0"

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Signal handling (Ctrl+C)
ctrlc = "3.4"

# Logging
log = "0.4"
env_logger = "0.10"

# Unsafe but necessary for strict FFI if needed, though wrappers should handle most
libc = "0.2"

[dev-dependencies]
serial_test = "2.0"
